# football-API-client

./: .gitignore  LICENSE  README.md  pyproject.toml
footballAPIClient/: __init__.py  __main__.py  _constants.py  footballAPI.py
footballAPIClient/Exceptions/: APILimitExceededError.py  ApiKeyMissingError.py  InternalApiException.py  InvalidApiKeyError.py  MissingParametersError.py
footballAPIClient/helpers/: ParameterValidator.py
footballAPIClient/tests/: test_footballapi.py
footballAPIClient/tests/helpers/: test_parameter_validator.py
